Project

General

Profile

Actions

Bug #11721

closed

String used as IO object buffer unexpectedly frozen if #to_sym called on it

Bug #11721: String used as IO object buffer unexpectedly frozen if #to_sym called on it

Added by twalpole@gmail.com (Thomas Walpole) almost 11 years ago. Updated almost 11 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.3.0dev (2015-11-20 trunk 52685) [x86_64-darwin14]
[ruby-core:71611]

Description

A string with forced encoding used a buffer for reading from a File becomes frozen unexpectedly if #to_sym is called on it

file = File.open('some_file')
str = ""
str.force_encoding(Encoding::US_ASCII)
str.frozen? # => false
file.read(2,str)
str.frozen? # => false
str.to_sym
str.frozen? # => true

If the force_encoding is skipped str doesn't become frozen, same with reading from the file.

Updated by nobu (Nobuyoshi Nakada) almost 11 years ago Actions #1

  • Status changed from Open to Closed

Applied in changeset r52686.


symbol.c: not freeze the receiver

Actions

Also available in: PDF Atom