symbol.c: not freeze the receiver

* symbol.c (rb_str_intern): should not freeze the receiver itself
  unexpectedly.  [ruby-core:71611] [Bug #11721]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@52686 b2dd03c8-39d4-4d8f-98ff-823fe69b080e